S3 Storage Provider to install as a bundle into an app based on DDF 2.29.1